# wikidated

./: .flake8  .gitignore  LICENSE.header  MANIFEST.in  Makefile  README.rst  build.gradle.kts  noxfile.py  pyproject.toml  settings.gradle.kts  setup.cfg  setup.py  vulture-whitelist.py
kg-evolve/: build.gradle.kts
kg-evolve/src/main/java/com/lschmelzeisen/kgevolve/: App.java  FullRevision.java
kg-evolve/src/test/java/com/lschmelzeisen/kgevolve/: AppTest.java
scripts/: analyze_wikidated_v1_0.py  build_wikidated_v1_0.py  validate_wikidated_v1_0.py
src/kg_evolve/: __init__.py  __main__.py  _paths.py  _utils.py  java_logging_bride.py  process_wikidata_dump.py  settings_.py  triple_operation_builder.py  wikidata_dump.py  wikidata_rdf_serializer.py  wikidata_sites.py
src/kg_evolve/scripts/: __init__.py  wikidata_collect_triple_operations_statistics.py  wikidata_download_dumps.py  wikidata_dumps_to_triple_operations.py
src/main/java/com/lschmelzeisen/kgevolve/: FastRevisionDumpFileProcessor.java  FullRevision.java  KgEvolve.java  MyRdfSerializer.java
src/wikidata_history_analyzer/: __init__.py  __main__.py  _paths.py  _utils.py  java_logging_bride.py  jvm_manager.py  misc.py  settings_.py  triple_operation_builder.py  wikidata_dump.py  wikidata_dump_manager.py  wikidata_dump_meta.py  wikidata_meta_history_7z_dump.py  wikidata_meta_history_dump.py  wikidata_namespaces.py  wikidata_page_table.py  wikidata_rdf_revision.py  wikidata_rdf_serializer.py  wikidata_revision.py  wikidata_sites_table.py
src/wikidata_history_analyzer/cli/: _wikidata_rdf_revision_program.py  wikidata_collect_statistics_program.py  wikidata_collect_triple_operations_statistics.py  wikidata_download_dumps_program.py  wikidata_extract_incremental_rdf_program.py  wikidata_extract_rdf.py  wikidata_extract_rdf_program.py  wikidata_extract_triple_operations.py  wikidata_merge_incremental_rdf_program.py  wikidata_visualize_statistics_program.py
src/wikidata_history_analyzer/datamodel/: wikidata_incremental_rdf_revision.py  wikidata_page_meta.py  wikidata_raw_revision.py  wikidata_rdf_revision.py  wikidata_revision.py  wikidata_site_info.py
src/wikidata_history_analyzer/dumpfiles/: wikidata_dump.py  wikidata_dump_manager.py  wikidata_meta_history_dump.py  wikidata_namespaces.py  wikidata_page_table.py  wikidata_sites_table.py
src/wikidata_history_analyzer/scripts/: wikidata_download_dumps.py  wikidata_dumps_to_triple_operations.py  wikidata_extract_rdf.py  wikidata_extract_triple_operations.py
src/wikidated/: __init__.py  _java_dependency_downloader.py  _jvm_manager.py  _utils.py  _wikidated_sorted_entity_streams.py  _wikidated_v1_0_files.py  datamodel.py  wikidated_aggregated_dataset.py  wikidated_dataset.py  wikidated_entity_streams.py  wikidated_global_stream.py  wikidated_manager.py  wikidated_revision.py  wikidated_sorted_entity_streams.py  wikidated_v1_0.py
src/wikidated/_utils/: __init__.py  java_dependency_downloader.py  jvm_manager.py  misc.py  parallelize.py  range_map.py  seven_zip_archive.py
src/wikidated/wikidata/: __init__.py  wikidata_api.py  wikidata_dump.py  wikidata_dump_file.py  wikidata_dump_pages_meta_history.py  wikidata_dump_sites_table.py  wikidata_rdf_converter.py  wikidata_revision_base.py
tests/: __init__.py  test_cli.py  test_import.py
wikidata-dump-processor/: build.gradle.kts  settings.gradle.kts
wikidata-dump-processor/src/wikidatadumpprocessor/: FastRevisionDumpFileProcessor.java  FullRevision.java  MyRdfSerializer.java  WikidataDumpProcessor.java
wikidata-toolkit/: build.gradle
