[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]~=6.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py37']
quiet = true

[tool.coverage]
    [tool.coverage.run]
    branch = true
    source = ["src"]

    [tool.coverage.report]
    exclude_lines = [
        # Exclude specific lines from coverage report.
        "# pragma: no cover",

        # Debug-only code.
        "def __repr__",

        # Defensive assertion code.
        "raise AssertionError",
        "raise NotImplementedError",
        "raise RuntimeError",
        "raise ValueError",

        # Not able to hit during testing.
        'if __name__ == "__main__":',

        # Unimplemented code.
        "pass",

        # Missing import code.
        "except ImportError",

        # Type-checking
        "TYPE_CHECKING",
    ]
    omit = ["src/kg_evolve/__main__.py"]
    skip_covered = true
    skip_empty = true

    [tool.coverage.html]
    show_contexts = true

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true

[tool.nbqa.addopts]
autoflake = [
    "--in-place",
    "--remove-all-unused-imports",
    "--remove-duplicate-keys",
    "--remove-unused-variables",
]

[tool.nbqa.mutate]
autoflake = 1
black = 1
isort = 1

[tools.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "src/kg_evolve/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
